--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular2-notifications": "^0.7.8",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "ng-recaptcha": "^3.0.2",
     "ngx-progressbar": "^2.0.8",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
