--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "box.frontend",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "ng-recaptcha": "^3.0.2",
+    "ngx-cookie": "^1.0.0",
     "ngx-progressbar": "^2.0.8",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
