--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4200 --aot",
+    "start": "ng serve --host=0.0.0.0 --port=4200",
     "build": "ng build --prod --build-optimizer",
     "test": "ng test",
     "lint": "ng lint",
