--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
+    "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.8",
     "core-js": "^2.5.1",
     "hammerjs": "^2.0.8",
