--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/schematics": "0.0.34",
     "@angular/animations": "^4.4.6",
     "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "^4.4.6",
@@ -25,13 +26,13 @@
     "@angular/router": "^4.4.6",
     "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.8",
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
-    "ng-recaptcha": "^3.0.2",
+    "ng-recaptcha": "^3.0.3",
     "ng2-validation": "^4.2.0",
     "ngx-progressbar": "^2.1.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.18"
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.4.4",
@@ -39,15 +40,15 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.96",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-jasmine": "^1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
