--- a/package.json
+++ b/package.json
@@ -13,32 +13,36 @@
   "private": true,
   "dependencies": {
     "@angular-devkit/schematics": "0.0.34",
-    "@angular/animations": "^4.4.6",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "^4.4.6",
-    "@angular/compiler": "^4.4.6",
-    "@angular/core": "^4.4.6",
-    "@angular/forms": "^4.4.6",
-    "@angular/http": "^4.4.6",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "^4.4.6",
-    "@angular/platform-browser-dynamic": "^4.4.6",
-    "@angular/router": "^4.4.6",
+    "@angular/animations": "^5.2.2",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.2",
+    "@angular/compiler": "^5.2.2",
+    "@angular/core": "^5.2.2",
+    "@angular/forms": "^5.2.2",
+    "@angular/http": "^5.2.2",
+    "@angular/material": "^5.1.0",
+    "@angular/platform-browser": "^5.2.2",
+    "@angular/platform-browser-dynamic": "^5.2.2",
+    "@angular/platform-server": "^5.2.2",
+    "@angular/router": "^5.2.2",
+    "@ngx-progressbar/core": "^4.0.1",
+    "@ngx-progressbar/http": "^4.0.1",
+    "@ngx-progressbar/http-client": "^3.0.2",
+    "@ngx-progressbar/router": "^4.0.1",
     "angular2-jwt": "^0.2.3",
     "angular2-notifications": "^0.7.8",
     "core-js": "^2.5.3",
     "hammerjs": "^2.0.8",
     "ng-recaptcha": "^3.0.3",
     "ng2-validation": "^4.2.0",
-    "ngx-progressbar": "^2.1.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.4.4",
-    "@angular/compiler-cli": "^4.2.4",
+    "@angular/compiler-cli": "^5.2.2",
     "@angular/language-service": "^4.2.4",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "^2.8.6",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.96",
     "codelyzer": "~3.2.0",
@@ -53,6 +57,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.3.3"
+    "typescript": "^2.6.2"
   }
 }
